Fix h3 alignment in info-box and highlight-box - left align to match content

--- a/style.css
+++ b/style.css
@@ -479,7 +479,7 @@ nav {
 }
 
 .info-box h3 {
-  text-align: center;
+  text-align: left;
 }
 
 .info-box a {
@@ -505,7 +505,7 @@ nav {
 }
 
 .highlight-box h3 {
-  text-align: center;
+  text-align: left;
 }
 
 .highlight-box a {
